# miyoubi-panel

./: Cargo.toml  README.md
src/: backup.rs  db.rs  docker.rs  files.rs  handlers.rs  logbuffer.rs  main.rs  registry.rs  setup.rs  users.rs
static/: index.html  login.html  mobile.html  setup.html  status.html  viewer.html
