[package]
name = "minecraft-panel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minecraft-panel"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = "0.7"
axum-server  = { version = "0.7",  features = ["tls-rustls"] }
tower-http   = { version = "0.5",  features = ["cors"] }
tower        = "0.4"
bollard      = "0.17"
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
futures-util = "0.3"
async-stream = "0.3"
chrono       = { version = "0.4",  features = ["serde"] }
regex        = "1"
once_cell    = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes        = "1"
rand         = "0.8"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls-manual-roots"], default-features = false }
rustls       = { version = "0.23", features = ["ring"], default-features = false }
tokio-util   = { version = "0.7",  features = ["io"] }
urlencoding  = "2"
